5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1582_1333.log
== TEST (2019-03-30 23:42:36) 
-- CODE:
expressao = 
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:45:04) 
-- CODE:
a = 3**2
expressao = 30-a+8//a*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:46:13) 
-- CODE:
a = 3**2
expressao = 30-a+8//a*10
print(expressao)
-- EXECUTION TIME:
0.179659
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
